# loopers

./: .gitignore  Cargo.toml  Dockerfile.aarch64  README.md  build-rasp-aarch64.sh  build.rs
.github/workflows/: rust.yml
client/: .flutter-plugins-dependencies  .gitignore  pubspec.yaml  update_grpc.sh
client/android/: local.properties
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/java/com/example/android/: MainActivity.java
client/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: config.dart  looper_service.dart  main.dart  settings.dart
client/linux/: my_application.cc
config/: log4rs.yaml
docs/: make_colors.sh
loopers/: Cargo.toml
loopers-common/: Cargo.toml  build.rs
loopers-common/protos/: loopers.proto
loopers-common/src/: api.rs  config.rs  gui_channel.rs  lib.rs  midi.rs  music.rs
loopers-engine/: Cargo.toml
loopers-engine/benches/: looper_benchmarks.rs
loopers-engine/src/: error.rs  gui.rs  lib.rs  looper.rs  metronome.rs  midi.rs  sample.rs  session.rs  trigger.rs
loopers-gui/: Cargo.toml  build.rs
loopers-gui/protos/: loopers.proto
loopers-gui/src/: app.rs  lib.rs  main.rs  skia.rs  widgets.rs
loopers-jack/: Cargo.toml  build.rs
loopers-jack/src/: main.rs
loopers-vst/: Cargo.toml
loopers-vst/src/: lib.rs
loopers/src/: looper_coreaudio.rs  loopers_jack.rs  main.rs
protos/: loopers.proto
scripts/: create_appimage.sh  create_mac_app.sh
src/: app.rs  config.rs  engine.rs  error.rs  gui.rs  looper.rs  main.rs  metronome.rs  midi.rs  music.rs  protos.rs  sample.rs  session.rs  skia.rs
styles/: main.css
