[package]
name = "loopers"
version = "0.1.0"
authors = ["Micah Wylde <micah@micahw.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
jack = "0.6"
crossbeam-queue = "0.1"
rand = "0.6"
hound = "3.4.0"

prost = "0.5"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
hyper = "0.12"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-hyper"] }
tower-service = "0.2"
tower-util = "0.1"

futures = "0.1"
bytes = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc",  features = ["tower-hyper"]  }
prost-build = "0.5"
serde = { version = "1.0", features = ["derive"] }
