[package]
name = "loopers-common"
version = "0.1.1"
edition = "2018"
authors = ["Micah Wylde <micah@micahw.com>"]
description = "Common code for loopers project. See loopers-jack for for the main project."
homepage = "https://github.com/mwylde/loopers"
repository = "https://github.com/mwylde/loopers"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }

csv = "1.1"

crossbeam-queue = "0.2"
crossbeam-channel = "0.4"
arrayvec = "0.5.1"

log = "0.4"

tempfile = "3"

derive_more = "0.99"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
