[package]
name = "loopers-common"
version = "0.2.0"
edition = "2018"
authors = ["Micah Wylde <micah@micahw.com>"]
description = "Common code for loopers project. See loopers-jack for for the main project."
homepage = "https://github.com/mwylde/loopers"
repository = "https://github.com/mwylde/loopers"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
bytemuck = { version = "1", features = ["derive"] }
csv = "1.3"

crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
arrayvec = "0.7"

log = "0.4"

tempfile = "3"

derive_more = "0.99"

[dev-dependencies]
fern = "0.6"


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
