[package]
name = "loopers-engine"
version = "0.2.0"
edition = "2024"
authors = ["Micah Wylde <micah@micahw.com>"]
description = "Core engine for loopers project. See loopers-jack for for the main project."
homepage = "https://github.com/mwylde/loopers"
repository = "https://github.com/mwylde/loopers"
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
atomic = "0.6.0"
rand = "0.8"
hound = "3.5.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
bytes = "1.0"
futures = "0.3"
dirs = "5"
log = "0.4"
toml = "0.8"
serde_json = "1.0"
itertools = "0.12"

[dependencies.loopers-common]
path = "../loopers-common"
version = "^0.2.0"

[dev-dependencies]
tempfile = "3.1.0"
fern = "0.6"
criterion = "0.3"
proptest = "1.0"

[[bench]]
name = "looper_benchmarks"
harness = false
