[package]
name = "loopers-gui"
version = "0.1.1"
edition = "2018"
authors = ["Micah Wylde <micah@micahw.com>"]
description = "Gui for loopers project. See loopers-jack for for the main project."
homepage = "https://github.com/mwylde/loopers"
repository = "https://github.com/mwylde/loopers"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4.8"
hound = "3.4.0"

bytes = "0.5"
dirs = "1.0"

skia-safe = {version = "0.36", features = ["gl"]}

sdl2 = "0.34"

tinyfiledialogs = "3.3"
lazy_static = "1"
chrono = "0.4.11"

regex = "1"

gl-rs = { package = "gl", version = "0.14.0" }
crossbeam-queue = "0.2"
crossbeam-channel = "0.4"

[dependencies.loopers-common]
path = "../loopers-common"
version = "0.1.0"
