[package]
name = "loopers-gui"
version = "0.2.0"
edition = "2021"
authors = ["Micah Wylde <micah@micahw.com>"]
description = "Gui for loopers project. See loopers-jack for for the main project."
homepage = "https://github.com/mwylde/loopers"
repository = "https://github.com/mwylde/loopers"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
hound = "3.4.0"

bytes = "1.5"
dirs = "5.0"

skia-safe = {version = "0.91", features = ["gl", "x11"]}

sdl2 = { version = "0.38"}

tinyfiledialogs = "3.9"
lazy_static = "1"
chrono = "0.4.31"

regex = "1"

gl-rs = { package = "gl", version = "0.14.0" }
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"

[dependencies.loopers-common]
path = "../loopers-common"
version = "^0.2.0"
