[package]
name = "loopers-jack"
version = "0.1.0"
authors = ["Micah Wylde <micah@micahw.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "0.6"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
hyper = "0.12"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-hyper"] }
tower-service = "0.2"
tower-util = "0.1"

futures = "0.1"
bytes = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

clap = "2.33.0"

log = "0.4"
fern = "0.6"

crossbeam-queue = "0.2"
crossbeam-channel = "0.4"
rand = "0.6"
hound = "3.4.0"
chrono = "0.4.11"
lazy_static = "1.4.0"
dirs = "2"

loopers-common = { path = "../loopers-common" }
loopers-engine = { path = "../loopers-engine" }

[features]
fail-on-warnings = []
