[package]
name = "loopers-jack"
version = "0.1.1"
authors = ["Micah Wylde <micah@micahw.com>"]
description = "Loopers is graphical live looper, designed for ease of use and rock-solid stability"
homepage = "https://github.com/mwylde/loopers"
repository = "https://github.com/mwylde/loopers"
keywords = ["audio", "looping", "music", "dsp"]
categories = ["multimedia::audio"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2018"

[dependencies]
jack = "0.6"

futures = "0.1"
bytes = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33.0"

log = "0.4"
fern = "0.6"

crossbeam-queue = "0.2"
crossbeam-channel = "0.4"
rand = "0.6"
hound = "3.4.0"
chrono = "0.4.11"
dirs = "2"

[dependencies.loopers-common]
path = "../loopers-common"
version = "0.1.0"

[dependencies.loopers-engine]
path = "../loopers-engine"
version = "0.1.0"

[dependencies.loopers-gui]
path = "../loopers-gui"
version = "0.1.0"

[features]
fail-on-warnings = []
