[package]
name = "loopers"
version = "0.2.0"
authors = ["Micah Wylde <micah@micahw.com>"]
description = "Loopers is graphical live looper, designed for ease of use and rock-solid stability"
homepage = "https://github.com/mwylde/loopers"
repository = "https://github.com/mwylde/loopers"
keywords = ["audio", "looping", "music", "dsp"]
categories = ["multimedia::audio"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2018"

[dependencies]
jack = "0.7"

futures = "0.1"
bytes = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33.0"

log = "0.4"
fern = "0.6"

crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
rand = "0.8"
hound = "3.4.0"
chrono = "0.4.11"
dirs = "2"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = {version = "0.10.0"}

[dependencies.loopers-common]
path = "../loopers-common"
version = "^0.2.0"

[dependencies.loopers-engine]
path = "../loopers-engine"
version = "^0.2.0"

[dependencies.loopers-gui]
path = "../loopers-gui"
version = "^0.2.0"

[features]
fail-on-warnings = []
